--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "element-plus": "^1.2.0-beta.4",
+    "postcss": "^8.4.3",
+    "postcss-import": "^14.0.2",
+    "postcss-loader": "^6.2.1",
+    "postcss-pxtorem": "^5.1.1",
+    "postcss-url": "^10.1.3",
     "unplugin-vue-components": "^0.17.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
