--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "better-scroll": "^2.4.2",
     "core-js": "^3.6.5",
     "element-plus": "^1.2.0-beta.4",
     "postcss": "^8.4.3",
@@ -16,6 +17,7 @@
     "postcss-loader": "^6.2.1",
     "postcss-pxtorem": "^5.1.1",
     "postcss-url": "^10.1.3",
+    "swiper": "^7.3.1",
     "unplugin-vue-components": "^0.17.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
